Material edits. Minor env change
Materials are now double sided so they aren't invisible on one side. Cave shaped up with a dead end and two hallways. Left will be an atrium-like area, the other will have more.

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -409,7 +409,7 @@ BP_MainCharacter_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.Cons
 EdGraph=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 NewFunction=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
 NewFunction_4=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
-SceneComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
+SceneComponent=
 LandscapeStreamingProxy=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 Trigger_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue
 Overworld_TransitionTrigger_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
@@ -420,7 +420,7 @@ LightComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.Constrai
 PointLight=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 SpringArmComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue
 K2Node_FunctionEntry=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
-StaticMeshComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
+StaticMeshComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 Lantern_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 Character=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 K2Node_Variable=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
@@ -436,6 +436,7 @@ Torch_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGrou
 bp_Slime_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 bp_char_slime_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 bp_actor_Slime_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
+ParticleSystemComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Resources/Mobs/Slime
@@ -711,7 +712,7 @@ AnimGraphNode_AssetPlayerBase="\"Object\" "
 AnimGraphNode_Root="\"Object\" "
 AnimGraphNode_Slot="\"Object\" "
 Actor="\"Object\" "
-StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 InputAction="\"Object\" "
 BlackboardData="\"Object\" \"Object.Parent.ParentKeys.ParentKeys[1]\" \"Object.Blackboard\" "
 BehaviorTreeGraphNode_Root="\"Object\" \"Object.AI.AI|BehaviorTree\" "
@@ -3048,16 +3049,16 @@ StaticMeshComponent.Collision=False
 StaticMeshComponent.Lighting=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/Resources/Basic_Objects/chestLong.chestLong;
+RecentlyPlaced=/Game/Resources/Basic_Objects/BunchaRocks.BunchaRocks;
+RecentlyPlaced=/Game/Resources/Basic_Objects/Torch.Torch;
+RecentlyPlaced=/Game/Resources/Basic_Objects/chest/chestLong.chestLong;
 RecentlyPlaced=/Game/Resources/Mobs/Slime/bp_actor_Slime.bp_actor_Slime;
 RecentlyPlaced=/Game/Resources/Mobs/Slime/bp_Slime.bp_Slime;
 RecentlyPlaced=/Game/Resources/Mobs/Slime/slimeCombined.slimeCombined;
-RecentlyPlaced=/Game/Resources/Basic_Objects/Torch.Torch;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Rock_EDIT.SM_Rock_EDIT;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Rock.SM_Rock;
-RecentlyPlaced=/Game/StarterContent/Props/BunchaRocks.BunchaRocks;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Bush.SM_Bush;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Stairs.SM_Stairs;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Rock1.SM_Rock1;
@@ -3070,26 +3071,26 @@ RecentlyPlaced=/Game/Resources/Functional/Equips/Lantern/Lantern.Lantern;
 RecentlyPlaced=/Game/Resources/Functional/Equips/LanternFinal.LanternFinal;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Resources/Basic_Objects/Material_004
-MRUItem1=/Game/Resources/Basic_Objects/Material_003
-MRUItem2=/Game/Resources/Basic_Objects/Material_002
-MRUItem3=/Game/Resources/Basic_Objects/Material_001
-MRUItem4=/Game/Resources/Basic_Objects/Material
-MRUItem5=/Game/Resources/Basic_Objects/chestLong
-MRUItem6=/Game/Resources/Mobs/Slime/bp_char_slime
-MRUItem7=/Game/Resources/Mobs/Slime/bp_actor_Slime
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_MainCharacter
-MRUItem9=/Game/Resources/Mobs/Slime/bp_Slime
-MRUItem10=/Game/Resources/Functional/Equips/Lantern/LanternOn
-MRUItem11=/Game/Resources/Functional/Equips/Lantern/LanternOff_m
-MRUItem12=/Game/Resources/Mobs/Slime/slimeCombined
-MRUItem13=/Game/Resources/Mobs/Material
-MRUItem14=/Game/Resources/Mobs/slimeCombined
-MRUItem15=/Game/Resources/Basic_Objects/Torch
-MRUItem16=/Game/Resources/Functional/Footsteps/BP_FootstepAnimNotify
-MRUItem17=/Game/StarterContent/Props/BunchaRocks
-MRUItem18=/Game/StarterContent/Props/SM_Rock_EDIT
-MRUItem19=/Game/StarterContent/Props/SM_Rock1
+MRUItem0=/Game/Resources/Basic_Objects/Material_020
+MRUItem1=/Game/Resources/Basic_Objects/Material_019
+MRUItem2=/Game/Resources/Basic_Objects/Material_018
+MRUItem3=/Game/Resources/Basic_Objects/Material_017
+MRUItem4=/Game/Resources/Basic_Objects/Material_016
+MRUItem5=/Game/Resources/Basic_Objects/Material_015
+MRUItem6=/Game/Resources/Basic_Objects/Material_014
+MRUItem7=/Game/Resources/Basic_Objects/Material_013
+MRUItem8=/Game/Resources/Basic_Objects/Material_012
+MRUItem9=/Game/Resources/Basic_Objects/Material_011
+MRUItem10=/Game/Resources/Basic_Objects/Material_010
+MRUItem11=/Game/Resources/Basic_Objects/Material_009
+MRUItem12=/Game/Resources/Basic_Objects/Material_008
+MRUItem13=/Game/Resources/Basic_Objects/Material_007
+MRUItem14=/Game/Resources/Basic_Objects/Material_006
+MRUItem15=/Game/Resources/Basic_Objects/Material_005
+MRUItem16=/Game/Resources/Basic_Objects/Material_004
+MRUItem17=/Game/Resources/Basic_Objects/Material_003
+MRUItem18=/Game/Resources/Basic_Objects/Material_002
+MRUItem19=/Game/Resources/Basic_Objects/Material_001
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
@@ -3181,6 +3182,22 @@ MRUItem19=/Game/StarterContent/Props/SM_Rock1
 /Game/Resources/Basic_Objects/Material_002.Material_002=1
 /Game/Resources/Basic_Objects/Material_003.Material_003=1
 /Game/Resources/Basic_Objects/Material_004.Material_004=1
+/Game/Resources/Basic_Objects/Material_005.Material_005=1
+/Game/Resources/Basic_Objects/Material_006.Material_006=1
+/Game/Resources/Basic_Objects/Material_007.Material_007=1
+/Game/Resources/Basic_Objects/Material_008.Material_008=1
+/Game/Resources/Basic_Objects/Material_009.Material_009=1
+/Game/Resources/Basic_Objects/Material_010.Material_010=1
+/Game/Resources/Basic_Objects/Material_011.Material_011=1
+/Game/Resources/Basic_Objects/Material_012.Material_012=1
+/Game/Resources/Basic_Objects/Material_013.Material_013=1
+/Game/Resources/Basic_Objects/Material_014.Material_014=1
+/Game/Resources/Basic_Objects/Material_015.Material_015=1
+/Game/Resources/Basic_Objects/Material_016.Material_016=1
+/Game/Resources/Basic_Objects/Material_017.Material_017=1
+/Game/Resources/Basic_Objects/Material_018.Material_018=1
+/Game/Resources/Basic_Objects/Material_019.Material_019=1
+/Game/Resources/Basic_Objects/Material_020.Material_020=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
