--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -429,7 +429,7 @@ StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettin
 MeshNaniteSettings=
 LanternOn_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 PointLightComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
-K2Node=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
+K2Node=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 BunchaRocks_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 AmbientSound=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 Emitter=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
@@ -440,9 +440,10 @@ bp_actor_Slime_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.Constr
 ParticleSystemComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 K2Node_CallFunction=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 WP_Stamina_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
+K2Node_MacroInstance=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/UI
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -3204,8 +3205,8 @@ RecentlyPlaced=/Game/Resources/Functional/Equips/Lantern/Lantern.Lantern;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/UI/WP_Stamina
-MRUItem1=/Game/UI/Dialogue/BPI_DIALOGUE_TEST
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_MainCharacter
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_MainCharacter
+MRUItem2=/Game/UI/Dialogue/BPI_DIALOGUE_TEST
 MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
 MRUItem4=/Game/UI/WP_LoadingScreen1
 MRUItem5=/Game/Resources/Functional/Cave_TransitionTrigger
@@ -3346,7 +3347,7 @@ MRUItem19=/Game/Levels/Cave
 /Game/Resources/Functional/Equips/Lantern/Candle.Candle=1
 /Game/UI/WP_LoadingScreen1.WP_LoadingScreen1=0
 /Game/UI/SlimeCavesLoadingScreen.SlimeCavesLoadingScreen=1
-/Game/UI/WP_Stamina.WP_Stamina=1
+/Game/UI/WP_Stamina.WP_Stamina=0
 /Game/UI/Dialogue/BPI_DIALOGUE_TEST.BPI_DIALOGUE_TEST=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
