--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -323,7 +323,7 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Attack1,InputSettings.Bindings.ActionMappings.PrepAttack,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Attack1,InputSettings.Bindings.ActionMappings.PrepAttack,IOSRuntimeSettings.Build.Remote Build Options,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Grid Properties,MaterialEditorInstanceConstant.ParameterGroups.Surface Properties
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis
@@ -443,7 +443,7 @@ WP_Stamina_C=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.Constraint
 K2Node_MacroInstance=BP_EnemyAI_C.Physics.ConstraintsGroup,BP_AI_v2_C.Physics.ConstraintsGroup,BP_AI_v2_C.TransformCommon.Transform,BP_MainCharacter_C.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.dialogue,K2Node_VariableGet.DefaultValueCategory.Mesh
 PersonaPreviewSceneDescription=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.Settings.Environment,AssetViewerSettings.Settings.PostProcessing
 AssetViewerSettings=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.Settings.Environment,AssetViewerSettings.Settings.PostProcessing
-PreviewMeshCollection=
+PreviewMeshCollection=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.Settings.Environment,AssetViewerSettings.Settings.PostProcessing
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Resources/CustomAnimations
@@ -528,15 +528,15 @@ LastLevel=/Game/Levels/Overworld
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 FbxImportUI="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 AssetViewerSettings="\"Object\" "
 AnimSequence="\"Object\" \"Object.Animation.PlatformTargetFrameRate\" \"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" "
-AnimSequenceBase="\"Object\" \"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" \"Object.TimeStretchCurve.TimeStretchCurve\" \"Object.TimeStretchCurve.TimeStretchCurve.Sum_dT_i_by_C_i\" "
-AnimationAsset="\"Object\" \"Object.BlendOption.BlendIn\" \"Object.BlendOption.BlendOut\" \"Object.TimeStretchCurve.TimeStretchCurve\" \"Object.TimeStretchCurve.TimeStretchCurve.Sum_dT_i_by_C_i\" "
+AnimSequenceBase="\"Object\" \"Object.Animation.PlatformTargetFrameRate\" \"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" "
+AnimationAsset="\"Object\" \"Object.Animation.PlatformTargetFrameRate\" \"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
@@ -879,10 +879,10 @@ FKControlRig="\"Object\" "
 AnimBlueprint="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_MainCharacter.BP_MainCharacter
 OpenAssetsAtExit=/Game/Resources/Functional/Footsteps/BP_FootstepAnimNotify.BP_FootstepAnimNotify
-OpenAssetsAtExit=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll_Montage.Dodge_Small_Forward_Roll_Montage
+OpenAssetsAtExit=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll.Dodge_Small_Forward_Roll
 OpenAssetsAtExit=/Game/Characters/Mannequins/Animations/ABP_Manny.ABP_Manny
 
 [SlateAdditionalLayoutConfig]
@@ -3073,6 +3073,8 @@ AnimBlueprint.Optimization=True
 AnimBlueprint.Interfaces=True
 AnimBlueprint.BlueprintOptions=True
 AnimBlueprint.Thumbnail=True
+ABP_Manny_C.Default=True
+TransformToolOptions.ToolOptions=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3235,26 +3237,26 @@ RecentlyPlaced=/Game/StarterContent/Textures/T_Rock_Basalt_N.T_Rock_Basalt_N;
 RecentlyPlaced=/Game/Resources/Functional/Equips/Lantern/Lantern.Lantern;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll_Montage
-MRUItem1=/Game/Resources/CustomAnimations/TEST_Dodge_Small_Forward_Roll_Montage_2
-MRUItem2=/Game/Characters/Mannequins/Rigs/Poses/Quinn/Quinn_thigh_l_anim
+MRUItem0=/Game/Resources/CustomAnimations/DODGETEST
+MRUItem1=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll/Driving_Dodge_Small_Forward_Roll
+MRUItem2=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll
 MRUItem3=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem4=/Game/Characters/Mannequins/Animations/Quinn/BS_MF_Unarmed_WalkRun
-MRUItem5=/Game/Characters/Mannequins/Animations/ABP_Quinn
-MRUItem6=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll
-MRUItem7=/Game/Resources/Functional/Footsteps/BP_FootstepAnimNotify
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_MainCharacter
-MRUItem9=/Game/ThirdPerson/AI/NewBlendSpace
-MRUItem10=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll/Driving_Dodge_Small_Forward_Roll
-MRUItem11=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
-MRUItem12=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem13=/Game/UI/WP_Stamina
-MRUItem14=/Game/UI/Dialogue/BPI_DIALOGUE_TEST
-MRUItem15=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
-MRUItem16=/Game/UI/WP_LoadingScreen1
-MRUItem17=/Game/Resources/Functional/Cave_TransitionTrigger
-MRUItem18=/Game/UI/SlimeCavesLoadingScreen
-MRUItem19=/Game/Levels/NewLandscapeGrassType
+MRUItem4=/Game/Resources/CustomAnimations/Dodge_Small_Forward_Roll_Montage
+MRUItem5=/Game/Resources/Functional/Footsteps/BP_FootstepAnimNotify
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_MainCharacter
+MRUItem7=/Game/Resources/CustomAnimations/TEST_Dodge_Small_Forward_Roll_Montage_2
+MRUItem8=/Game/Characters/Mannequins/Rigs/Poses/Quinn/Quinn_thigh_l_anim
+MRUItem9=/Game/Characters/Mannequins/Animations/Quinn/BS_MF_Unarmed_WalkRun
+MRUItem10=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem11=/Game/ThirdPerson/AI/NewBlendSpace
+MRUItem12=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
+MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem14=/Game/UI/WP_Stamina
+MRUItem15=/Game/UI/Dialogue/BPI_DIALOGUE_TEST
+MRUItem16=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
+MRUItem17=/Game/UI/WP_LoadingScreen1
+MRUItem18=/Game/Resources/Functional/Cave_TransitionTrigger
+MRUItem19=/Game/UI/SlimeCavesLoadingScreen
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
