More complexity added to lock on system
Still in progress.
Mouse wheel up switches to a different target.
Mouse wheel down explicitly locks on to the previous target, if there was one.
The former still needs adjustments, but the latter works perfectly.

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -504,7 +504,7 @@ SpringArmComponent="\"Object\" "
 LastLogListing=AssetCheck
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
