--- a/TwoBigSwords/Config/DefaultEngine.ini
+++ b/TwoBigSwords/Config/DefaultEngine.ini
@@ -60,21 +60,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/TwoBigSwords")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/TwoBigSwords")
 
-[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
-bEnablePlugin=True
-bAllowNetworkConnection=True
-SecurityToken=86380807459B0835AAF43ABCA8E52965
-bIncludeInShipping=False
-bAllowExternalStartInShipping=False
-bCompileAFSProject=False
-bUseCompression=False
-bLogFiles=False
-bReportStats=False
-ConnectionType=USBOnly
-bUseManualIPAddress=False
-ManualIPAddress=
-
 [/Script/Engine.PhysicsSettings]
+PhysicsPrediction=(bEnablePhysicsPrediction=False,bEnablePhysicsHistoryCapture=False,MaxSupportedLatencyPrediction=1000.000000,ResimulationSettings=(bEnableResimulationErrorPositionThreshold=True,ResimulationErrorPositionThreshold=10.000000,bEnableResimulationErrorRotationThreshold=True,ResimulationErrorRotationThreshold=4.000000,bEnableResimulationErrorLinearVelocityThreshold=False,ResimulationErrorLinearVelocityThreshold=5.000000,bEnableResimulationErrorAngularVelocityThreshold=False,ResimulationErrorAngularVelocityThreshold=2.000000),PhysicsReplicationLODSettings=(bEnablePhysicsReplicationLOD=False,MinimumBaseDistance=200.000000,BaseDistanceRadiusMultiplier=0.750000,BaseDistancesForResimulationMode=0.250000,BaseDistancesForFullPrediction=0.800000,TimeOverDistance=0.150000))
 PhysicErrorCorrection=(PingExtrapolation=0.100000,PingLimit=100.000000,ErrorPerLinearDifference=1.000000,ErrorPerAngularDifference=1.000000,MaxRestoredStateError=1.000000,MaxLinearHardSnapDistance=400.000000,PositionLerp=0.000000,AngleLerp=0.400000,LinearVelocityCoefficient=100.000000,AngularVelocityCoefficient=10.000000,ErrorAccumulationSeconds=0.500000,ErrorAccumulationDistanceSq=15.000000,ErrorAccumulationSimilarity=100.000000)
 DefaultDegreesOfFreedom=Full3D
 bSuppressFaceRemapTable=False
@@ -100,7 +87,7 @@ PhysXTreeRebuildRate=10
 +PhysicalSurfaces=(Type=SurfaceType2,Name="Metal")
 +PhysicalSurfaces=(Type=SurfaceType3,Name="Wood")
 +PhysicalSurfaces=(Type=SurfaceType4,Name="Water")
++PhysicalSurfaces=(Type=SurfaceType5,Name="Stone")
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=False),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=False),MBPNumSubdivs=2)
 MinDeltaVelocityForHitEvents=0.000000
 ChaosSettings=(DefaultThreadingModel=TaskGraph,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
-
