Added Dirt PM, tested motion friction, QoL changes
New Dirt PM, footsteps dynamically change sound when stepping on it.
Currently in testing, differing surfaces should react differently if physics objects interact with them i.e. friction. Currently apply for Dirt and Stone PMs.
Lowered volume of minor sounds so they aren't as grating.

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,6 @@ DerivedDataCache/*
 /TwoBigSwords/Saved/Crashes
 /TwoBigSwords/Saved/Config/CrashReportClient
 /TwoBigSwords/Saved/Config/CrashReportClient
+
+#RE-ADD ME IF SERIOUS CHANGES ARE MADE. Remove android file server portion.
+/TwoBigSwords/Saved/Config/DefaultEngine.ini
