Adjusting pitch/volume of dynamic footstep sounds/QoL
Trying to make it blend better as part of the background and not making it pop out so much
Minor refactoring of the older sounds I used

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ DerivedDataCache/*
 
 #RE-ADD ME IF SERIOUS CHANGES ARE MADE. Remove android file server portion.
 /TwoBigSwords/Saved/Config/DefaultEngine.ini
+TwoBigSwords/Config/DefaultEngine.ini
