--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -561,7 +561,7 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.NotifyColor\" "
 StaticMesh="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 AssetViewerSettings="\"Object\" "
@@ -879,8 +879,12 @@ Texture="\"Object\" "
 LastLogListing=AssetCheck
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
@@ -889,10 +893,6 @@ RecentAssetEditors=TextureEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
@@ -928,19 +928,19 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/Levels/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Resources/SFX/Footsteps/Adobe-related/ProcessedSounds/FootstepDirt2
-MRUItem1=/Game/Resources/Functional/Footsteps/PM_Stone
-MRUItem2=/Game/Resources/Functional/Footsteps/PM_Water
-MRUItem3=/Game/Resources/Functional/Footsteps/PM_Dirt
-MRUItem4=/Game/StarterContent/Textures/T_Rock_Smooth_Granite_D
-MRUItem5=/Game/Resources/SFX/ogre_yell_cave2
-MRUItem6=/Game/Resources/SFX/fadeOutSound
-MRUItem7=/Game/Resources/SFX/fadeInSound
-MRUItem8=/Game/Resources/Functional/Footsteps/BP_FootstepAnimNotify
-MRUItem9=/Game/Resources/Functional/LoadTriggers/Overworld_LoadIn
-MRUItem10=/Game/Resources/Functional/LoadTriggers/Overworld_TransitionTrigger
-MRUItem11=/Game/Resources/Functional/LoadTriggers/Overworld_LoadOut
-MRUItem12=/Game/ThirdPerson/Blueprints/BP_MainCharacter
+MRUItem0=/Game/Resources/Functional/Footsteps/BP_FootstepAnimNotify
+MRUItem1=/Game/Resources/Functional/LoadTriggers/Overworld_LoadIn
+MRUItem2=/Game/Resources/Functional/LoadTriggers/Overworld_TransitionTrigger
+MRUItem3=/Game/Resources/Functional/LoadTriggers/Overworld_LoadOut
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_MainCharacter
+MRUItem5=/Game/Resources/SFX/Footsteps/Adobe-related/ProcessedSounds/FootstepDirt2
+MRUItem6=/Game/Resources/Functional/Footsteps/PM_Stone
+MRUItem7=/Game/Resources/Functional/Footsteps/PM_Water
+MRUItem8=/Game/Resources/Functional/Footsteps/PM_Dirt
+MRUItem9=/Game/StarterContent/Textures/T_Rock_Smooth_Granite_D
+MRUItem10=/Game/Resources/SFX/ogre_yell_cave2
+MRUItem11=/Game/Resources/SFX/fadeOutSound
+MRUItem12=/Game/Resources/SFX/fadeInSound
 MRUItem13=/Game/StarterContent/Props/Materials/M_Rock
 MRUItem14=/Game/Resources/Functional/Footsteps/NewBlueprint
 MRUItem15=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
@@ -1141,6 +1141,7 @@ InputTriggerPulse.Trigger Settings=True
 EnhancedInputDeveloperSettings.Trigger Default Values=True
 EnhancedInputEditorProjectSettings.Default=True
 MegascansMaterialParentSettings.Parent Materials=True
+InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
@@ -2354,7 +2355,6 @@ Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
 Texture2D.Compositing=True
-InterchangeFbxSettings.FBX =True
 
 [AssetEditorToolkitTabLocation]
 /Game/Blender_Collections/DrSPartsParsed/DrSFinal_Torus_003.DrSFinal_Torus_003=1
